[gd_scene load_steps=26 format=3 uid="uid://bsa3nr76gcdns"]

[ext_resource type="PackedScene" uid="uid://dl2ed4gkybggf" path="res://objects/player.tscn" id="2_s3r8o"]
[ext_resource type="Script" uid="uid://c5fsiecjo27n" path="res://scripts/view.gd" id="3_lysdy"]
[ext_resource type="PackedScene" uid="uid://fr7ig3ntwdde" path="res://objects/clark/clark.tscn" id="4_o27ma"]
[ext_resource type="Texture2D" uid="uid://qr8i5r4gt0jx" path="res://textures/subway_sign.svg" id="5_7s8k2"]
[ext_resource type="PackedScene" uid="uid://d1vi8b5vothk1" path="res://objects/clark/subway_door_decor.tscn" id="5_s3r8o"]
[ext_resource type="Script" uid="uid://cp1ic67oqpvir" path="res://scripts/hud.gd" id="5_x3dmn"]
[ext_resource type="Texture2D" uid="uid://cd7oyc56ehkx1" path="res://sprites/coin.png" id="6_7s8k2"]
[ext_resource type="FontFile" uid="uid://d0cxd77jybrcn" path="res://fonts/lilita_one_regular.ttf" id="7_hw6ln"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="8_s3r8o"]
[ext_resource type="Script" uid="uid://csjccrhj5wnx7" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="9_okeig"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="10_x3dmn"]
[ext_resource type="PackedScene" uid="uid://bs7lf6epkmtfj" path="res://objects/clark/train.tscn" id="12_hw6ln"]
[ext_resource type="Script" uid="uid://2niohidwyy8e" path="res://scripts/train_trigger.gd" id="13_tux4h"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_lg8b7"]
sky_horizon_color = Color(0.67451, 0.682353, 0.698039, 1)
sky_curve = 0.0175
ground_bottom_color = Color(1, 1, 1, 1)
ground_curve = 0.171484

[sub_resource type="Sky" id="Sky_7bk1c"]
sky_material = SubResource("ProceduralSkyMaterial_lg8b7")

[sub_resource type="Environment" id="Environment_o27ma"]
background_mode = 1
background_color = Color(0.0792697, 0.090596, 0.115572, 1)
sky = SubResource("Sky_7bk1c")
ambient_light_source = 2
ambient_light_color = Color(0.662745, 0.694118, 0.772549, 1)
ambient_light_energy = 1.15
tonemap_mode = 2
ssao_enabled = true
ssao_radius = 0.45
ssao_intensity = 1.0
ssao_power = 15.0
glow_enabled = true
glow_levels/2 = 0.6
glow_levels/3 = 0.6
glow_levels/5 = 0.0
glow_intensity = 2.0

[sub_resource type="BoxShape3D" id="BoxShape3D_o27ma"]
size = Vector3(3.77609, 0.05, 1.8)

[sub_resource type="BoxShape3D" id="BoxShape3D_s3r8o"]
size = Vector3(0.0773926, 2.07678, 7.25397)

[sub_resource type="BoxShape3D" id="BoxShape3D_lysdy"]
size = Vector3(0.0773926, 3.05511, 20.0425)

[sub_resource type="BoxShape3D" id="BoxShape3D_okeig"]
size = Vector3(0.0773926, 3.05511, 7.02668)

[sub_resource type="BoxMesh" id="BoxMesh_hw6ln"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tux4h"]
albedo_color = Color(0.135012, 0.135012, 0.135012, 1)
metallic = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_38ys3"]
font = ExtResource("7_hw6ln")
font_size = 48
shadow_color = Color(0, 0, 0, 0.376471)
shadow_offset = Vector2(2, 2)

[sub_resource type="Resource" id="Resource_7s8k2"]
script = ExtResource("10_x3dmn")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_y21wk"]
size = Vector3(1, 2.77094, 2.04102)

[node name="Main" type="Node3D"]

[node name="Environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_o27ma")

[node name="View" type="Node3D" parent="." node_paths=PackedStringArray("camera", "target")]
transform = Transform3D(-0.870545, 0.207966, -0.445984, 0, 0.906308, 0.422618, 0.49209, 0.367908, -0.788981, -0.489685, 5.18372, -7.75793)
script = ExtResource("3_lysdy")
camera = NodePath("../Camera")
target = NodePath("../Player")
rotation_speed = 160

[node name="Player" parent="." node_paths=PackedStringArray("view") instance=ExtResource("2_s3r8o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.837802, 4.08242, -9.03639)
view = NodePath("../PhantomCamera3D")
unlock_double_jump = false

[node name="Player 2" parent="." node_paths=PackedStringArray("view") instance=ExtResource("2_s3r8o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.233977, 4.78166, -10.0337)
view = NodePath("../PhantomCamera3D")
unlock_double_jump = false
player_2 = true

[node name="World" type="Node3D" parent="."]

[node name="clark" parent="World" instance=ExtResource("4_o27ma")]

[node name="wall-door-rotate2" parent="World" instance=ExtResource("5_s3r8o")]
transform = Transform3D(2.125, 0, 0, 0, 2, 0, 0, 0, 1, -0.501461, 3.01, -11.071)

[node name="StaticBody3D" type="StaticBody3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.63285, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/StaticBody3D"]
transform = Transform3D(0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, -0.365281, 1.65413, -3.00719)
shape = SubResource("BoxShape3D_o27ma")

[node name="StaticBody3D2" type="StaticBody3D" parent="World"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.52882, 3.97046, -7.53468)
shape = SubResource("BoxShape3D_s3r8o")

[node name="StaticBody3D3" type="StaticBody3D" parent="World"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/StaticBody3D3"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.46058, 1.47285, -6.49723)
shape = SubResource("BoxShape3D_lysdy")

[node name="StaticBody3D4" type="StaticBody3D" parent="World"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/StaticBody3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.3769, 1.47285, -2.96545)
shape = SubResource("BoxShape3D_okeig")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="World/StaticBody3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.35941, 1.47285, -2.96545)
shape = SubResource("BoxShape3D_okeig")

[node name="SignTexture" type="Sprite3D" parent="World"]
transform = Transform3D(-0.02, 0, -3.01992e-09, 0, 0.02, 0, 3.01992e-09, 0, -0.02, -0.500395, 4.67916, -2.25138)
texture = ExtResource("5_7s8k2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/SignTexture"]
transform = Transform3D(60.1866, 0, 0, 0, 13.48, 0, 0, 0, 5.9304, 0, 0, -2.96838)
mesh = SubResource("BoxMesh_hw6ln")
surface_material_override/0 = SubResource("StandardMaterial3D_tux4h")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.422618, -0.694272, 0.582563, 0, 0.642788, 0.766044, -0.906308, 0.323744, -0.271654, 0, 0, 0)
shadow_enabled = true
shadow_opacity = 0.75

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("5_x3dmn")

[node name="Icon" type="TextureRect" parent="HUD"]
offset_left = 57.0
offset_top = 67.0
offset_right = 313.0
offset_bottom = 323.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_7s8k2")

[node name="x" type="Label" parent="HUD"]
offset_left = 112.0
offset_top = 64.0
offset_right = 144.0
offset_bottom = 123.0
text = "Ã—"
label_settings = SubResource("LabelSettings_38ys3")

[node name="Coins" type="Label" parent="HUD"]
offset_left = 144.0
offset_top = 64.0
offset_right = 368.0
offset_bottom = 123.0
text = "0"
label_settings = SubResource("LabelSettings_38ys3")

[node name="Camera" type="Camera3D" parent="."]
physics_interpolation_mode = 1
transform = Transform3D(-0.378614, 0.0608307, -0.923554, 3.72529e-09, 0.997838, 0.0657235, 0.925555, 0.0248838, -0.377795, -10.6636, 4.78166, -13.0558)
current = true
fov = 40.0

[node name="PhantomCameraHost" type="Node" parent="Camera"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("8_s3r8o")

[node name="PhantomCamera3D" type="Node3D" parent="." node_paths=PackedStringArray("look_at_target")]
transform = Transform3D(-0.378614, 0.0608307, -0.923553, 3.72529e-09, 0.997838, 0.0657235, 0.925555, 0.0248838, -0.377795, -10.6636, 4.78166, -13.0558)
script = ExtResource("9_okeig")
look_at_mode = 2
look_at_target = NodePath("../Player")
tween_resource = SubResource("Resource_7s8k2")
metadata/_custom_type_script = "uid://csjccrhj5wnx7"

[node name="train" parent="." instance=ExtResource("12_hw6ln")]
transform = Transform3D(-6.55671e-08, 0, 1.5, 0, 1.4, 0, -1.5, 0, -6.55671e-08, -27.5267, 0.267847, -0.500239)

[node name="TrainTrigger" type="Area3D" parent="." node_paths=PackedStringArray("player", "player_2", "train")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.07064, 4.1007, -2.8832)
script = ExtResource("13_tux4h")
player = NodePath("../Player")
player_2 = NodePath("../Player 2")
train = NodePath("../train")
transition_to = "uid://biqvbf15aow1f"

[node name="CollisionShape3D" type="CollisionShape3D" parent="TrainTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.182465, -0.142578)
shape = SubResource("BoxShape3D_y21wk")

[node name="Timer" type="Timer" parent="TrainTrigger"]

[connection signal="coin_collected" from="Player" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Player 2" to="HUD" method="_on_coin_collected"]
[connection signal="train_entered" from="train" to="TrainTrigger" method="_on_train_train_entered"]
[connection signal="body_entered" from="TrainTrigger" to="TrainTrigger" method="_on_body_entered"]
[connection signal="timeout" from="TrainTrigger/Timer" to="TrainTrigger" method="_on_timer_timeout"]
